k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: host-info-flask-namespace
  labels:
    name: host-info-flask
