k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-info-flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost # Replace with your domain if you are deploying to a cluster with a domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: host-info-flask-service
            port:
              number: 80
